# agent-sdk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/claude-code/: Cargo.toml  README.md
crates/claude-code/src/: lib.rs  process.rs  protocol.rs
crates/claude-code/tests/: claude_integration.rs
crates/codex/: Cargo.toml  README.md
crates/codex/src/: lib.rs
crates/codex/tests/: codex_integration.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  executor.rs  lib.rs  session.rs  types.rs
crates/core/tests/: types_tests.rs
crates/opencode/: Cargo.toml  README.md
crates/opencode/src/: client.rs  lib.rs  protocol.rs
crates/opencode/tests/: opencode_integration.rs
crates/unified/: Cargo.toml
crates/unified/src/: lib.rs
crates/unified/tests/: e2e_tests.rs
