[package]
name = "nucel-agent-claude-code"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Claude Code provider for Nucel agent-sdk — subprocess wrapper for claude CLI"
repository = "https://github.com/nucel-dev/agent-sdk"
homepage = "https://github.com/nucel-dev/agent-sdk"
documentation = "https://docs.rs/nucel-agent-claude-code"
readme = "README.md"
keywords = ["claude", "coding", "cli", "ai", "agent"]
categories = ["development-tools", "api-bindings"]

[dependencies]
nucel-agent-core = { path = "../core", version = "0.1.2" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
uuid.workspace = true
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile.workspace = true
