[package]
name = "nucel-agent-codex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Codex provider for Nucel agent-sdk — subprocess wrapper for codex CLI"

[dependencies]
nucel-agent-core = { path = "../core", version = "0.1.0" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
