[package]
name = "nucel-agent-codex"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "Codex provider for Nucel agent-sdk — subprocess wrapper for OpenAI codex CLI"
repository = "https://github.com/nucel-dev/agent-sdk"
homepage = "https://github.com/nucel-dev/agent-sdk"
documentation = "https://docs.rs/nucel-agent-codex"
readme = "README.md"
keywords = ["codex", "openai", "coding", "cli", "agent"]
categories = ["development-tools", "api-bindings"]

[dependencies]
nucel-agent-core = { path = "../core", version = "0.1.2" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
