[package]
name = "nucel-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core traits and types for Nucel agent-sdk — provider-agnostic AI coding agent abstraction"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
