[package]
name = "nucel-agent-opencode"
version = "0.1.2"
edition.workspace = true
license.workspace = true
description = "OpenCode provider for Nucel agent-sdk — HTTP client to OpenCode server"
repository = "https://github.com/nucel-dev/agent-sdk"
homepage = "https://github.com/nucel-dev/agent-sdk"
documentation = "https://docs.rs/nucel-agent-opencode"
readme = "README.md"
keywords = ["opencode", "coding", "http", "ai", "agent"]
categories = ["development-tools", "api-bindings"]

[dependencies]
nucel-agent-core = { path = "../core", version = "0.1.2" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
reqwest.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
