[package]
name = "nucel-agent-sdk"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Unified AI coding agent SDK — provider-agnostic abstraction for Claude Code, Codex, and OpenCode"
repository = "https://github.com/nucel-dev/agent-sdk"
homepage = "https://github.com/nucel-dev/agent-sdk"
documentation = "https://docs.rs/nucel-agent-sdk"
readme = "../../README.md"
keywords = ["agent", "coding", "claude", "ai", "sdk"]
categories = ["development-tools", "api-bindings"]

[dependencies]
nucel-agent-core = { path = "../core", version = "0.1.1" }
nucel-agent-claude-code = { path = "../claude-code", version = "0.1.1" }
nucel-agent-codex = { path = "../codex", version = "0.1.1" }
nucel-agent-opencode = { path = "../opencode", version = "0.1.1" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock.workspace = true
tempfile.workspace = true
serde_json.workspace = true
chrono.workspace = true
